--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,8 @@
   <version>1.0.0-SNAPSHOT</version>
   <inceptionYear>2022</inceptionYear>
   <url>https://github.com/marschall/hibernate-array-types</url>
-  <name>Hibernate Batch Sequence Generator</name>
-  <description>Special purpose implementation of a Hibernate sequence generator</description>
+  <name>Hibernate Array Types</name>
+  <description>Hibernate UserTypes for binding arrays</description>
 
   <developers>
     <developer>
@@ -262,6 +262,12 @@
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
       <version>42.5.0</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>2.1.214</version>
       <scope>provided</scope>
     </dependency>
 
