--- a/pom.xml
+++ b/pom.xml
@@ -270,6 +270,12 @@
       <version>2.1.214</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.hsqldb</groupId>
+      <artifactId>hsqldb</artifactId>
+      <version>2.7.0</version>
+      <scope>provided</scope>
+    </dependency>
 
     <!-- logging -->
     <dependency>
