--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,16 @@
     <url>${project.url}</url>
     <tag>HEAD</tag>
   </scm>
+
+  <repositories>
+    <repository>
+      <id>spring-milestone</id>
+      <url>https://repo.spring.io/milestone</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+    </repository>
+  </repositories>
   
   <issueManagement>
     <system>GitHub Issues</system>
@@ -61,7 +71,7 @@
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <release>11</release>
+          <release>17</release>
         </configuration>
       </plugin>
       <plugin>
@@ -209,7 +219,7 @@
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-framework-bom</artifactId>
-        <version>5.3.23</version>
+        <version>6.0.0-M6</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -234,7 +244,7 @@
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-core</artifactId>
-      <version>5.6.11.Final</version>
+      <version>6.1.4.Final</version>
       <scope>provided</scope>
     </dependency>
 
