--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.github.marschall</groupId>
   <artifactId>hibernate-array-types</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <inceptionYear>2022</inceptionYear>
   <url>https://github.com/marschall/hibernate-array-types</url>
   <name>Hibernate Array Types</name>
@@ -35,7 +35,7 @@
     <connection>scm:git:git@github.com:marschall/hibernate-array-types.git</connection>
     <developerConnection>scm:git:git@github.com:marschall/hibernate-array-types.git</developerConnection>
     <url>${project.url}</url>
-    <tag>HEAD</tag>
+    <tag>1.0.0</tag>
   </scm>
   
   <issueManagement>
