--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
   <licenses>
     <license>
       <name>MIT</name>
-      <url>http://opensource.org/licenses/MIT</url>
+      <url>https://opensource.org/licenses/MIT</url>
       <distribution>repo</distribution>
     </license>
   </licenses>
@@ -37,16 +37,11 @@
     <url>${project.url}</url>
     <tag>HEAD</tag>
   </scm>
-  
+
   <issueManagement>
     <system>GitHub Issues</system>
     <url>https://github.com/marschall/hibernate-array-types/issues</url>
   </issueManagement>
-  
-  <ciManagement>
-    <system>Travis CI</system>
-    <url>https://travis-ci.org/marschall/hibernate-array-types</url>
-  </ciManagement>
 
   <build>
     <resources>
@@ -93,10 +88,21 @@
         <artifactId>maven-javadoc-plugin</artifactId>
         <configuration>
           <links>
-            <link>https://docs.oracle.com/en/java/javase/11/docs/api/</link>
-            <link>https://docs.jboss.org/hibernate/orm/5.6/javadocs/</link>
+            <link>https://docs.oracle.com/en/java/javase/17/docs/api/</link>
+            <link>https://docs.jboss.org/hibernate/orm/6.3/javadocs/</link>
           </links>
+          <source>17</source>
+          <notimestamp>true</notimestamp>
         </configuration>
+        <executions>
+          <execution>
+            <id>attach-javadocs</id>
+            <phase>package</phase>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
       <plugin>
         <groupId>io.smallrye</groupId>
@@ -376,6 +382,7 @@
   <properties>
     <project.reporting.outputEncoding>utf-8</project.reporting.outputEncoding>
     <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
+    <project.build.outputTimestamp>2023-05-18T11:56:31Z</project.build.outputTimestamp>
   </properties>
 
 </project>
