--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.github.marschall</groupId>
   <artifactId>hibernate-array-types</artifactId>
-  <version>2.0.1-SNAPSHOT</version>
+  <version>2.0.1</version>
   <inceptionYear>2022</inceptionYear>
   <url>https://github.com/marschall/hibernate-array-types</url>
   <name>Hibernate Array Types</name>
@@ -35,7 +35,7 @@
     <connection>scm:git:git@github.com:marschall/hibernate-array-types.git</connection>
     <developerConnection>scm:git:git@github.com:marschall/hibernate-array-types.git</developerConnection>
     <url>${project.url}</url>
-    <tag>HEAD</tag>
+    <tag>2.0.1</tag>
   </scm>
 
   <issueManagement>
@@ -382,7 +382,7 @@
   <properties>
     <project.reporting.outputEncoding>utf-8</project.reporting.outputEncoding>
     <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
-    <project.build.outputTimestamp>2023-05-18T11:56:31Z</project.build.outputTimestamp>
+    <project.build.outputTimestamp>2023-10-18T18:01:31Z</project.build.outputTimestamp>
   </properties>
 
 </project>
